<resources>
    <string name="app_name">AndroidAssignments</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a Button!</string>
    <string name="login">Login</string>
    <string name="password_hint">Enter aplha (1 cap , 1 Small) numeric  spl char(A$7)</string>
    <string name="password">Password</string>
    <string name="hint">Login Name</string>
    <string name="switchstring">What does this do ?</string>
    <string name="RadioButtonstring">RadioButton</string>
    <string name="CheckboxString">Checkbox</string>
    <string name="dialog_message">Do you want to finish ?</string>
    <string name="title_message">Dialog Box</string>
    <string name="dialog_ok">Ok</string>
    <string name="dialog_no">No</string>
    <string name="invalid">Invalid Email/Password</string>
    <string name="switch_on">Switch is On</string>
    <string name="switch_of">Switch is Off</string>
    <string name="result">Here is my response</string>
    <string name="camera_yes">camera permission granted</string>
    <string name="camera_no">camera permission denied</string>
    <string name="start_chat">Start Chat</string>
    <string name="send">Send</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
...
