...
        android:layout_column="0"
        android:text="@string/RadioButtonstring"
        android:layout_columnWeight="1"
        android:gravity="fill"/>

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="1"
        android:text="@string/CheckboxString"
        android:layout_columnWeight="1"
...
