...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChatWindow">


    <EditText
        android:id="@+id/EditTextBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/buttonChat"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:hint="Enter Text" />

    <Button
        android:id="@+id/buttonChat"
...
